文件上传，404和500页面处理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 server.port=80
 
 spring.thymeleaf.cache=false
+
+#\u540E\u53F0\u63A5\u53D7\u4E0A\u4F20\u6587\u4EF6\u5927\u5C0F\u7684\u6700\u5927\u8BBE\u7F6E
+spring.servlet.multipart.max-file-size=10MB
+#\u9875\u9762\u4E0A\u4F20\u6587\u4EF6\u5927\u5C0F\u7684\u6700\u5927\u8BBE\u7F6E
+spring.servlet.multipart.max-request-size=50MB
+#\u4E0A\u4F20\u6587\u4EF6\u7684\u4E34\u65F6\u5B58\u50A8\u8DEF\u5F84
+spring.servlet.multipart.location=e:/temp
+app.upload.location=e:/uploaded/
+
+spring.mvc.date-format=yyyy-MM-dd
